@@ -1,4 +1,4 @@
-// Copyright 2010, 2011, 2014, 2016, 2018, 2019 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2010, 2011, 2014, 2016, 2018, 2019, 2023 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.dao;
 
 import java.sql.*;
@@ -14,7 +14,7 @@ import org.deltava.util.system.SystemData;
 /**
  * A Data Access Object to load flight routes from approved Flight Reports. 
  * @author Luke
- * @version 9.0
+ * @version 11.1
  * @since 3.3
  */
 
@@ -91,7 +91,7 @@ public class GetFlightReportRoutes extends DAO {
 							wps.remove(0);
 						}
 					
-						String last = wps.get(wps.size() - 1);
+						String last = wps.getLast();
 						if (TerminalRoute.isNameValid(last) && (wps.size() > 1)) {
 							rt.setSTAR(last + "." + wps.get(wps.size() - 2));
 							wps.remove(wps.size() - 1);
